<resources>
    <string name="app_name" translatable="false">Food Restrictions</string>
    <string name="about_us_developers_text" translatable="false">* Thiago Ribeiro Mendes</string>
    <string name="about_us_icons_text" translatable="false">* Marcelo Torres</string>
    <string name="about_us_bt_changelog" translatable="false">Changelog</string>
    <string name="app_version">Version</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="allergic">I\'m Allergic</string>
    <string name="dont_eat">I don\'t eat</string>
    <string name="allergic_to">I\'m Allergic to</string>

    <string name="nav_app_settings">Settings</string>
    <string name="nav_food_settings">My Restrictions</string>
    <string name="nav_donations">What about a coffee?</string>
    <string name="nav_icon_mode">Show Icons</string>
    <string name="nav_text_mode">Show Texts</string>
    <string name="nav_veg_vegan">Vegetarian/Vegan</string>
    <string name="nav_about_us">About</string>

    <string name="food_msg_not_allergic">I\'m not allergic to any type of food</string>
    <string name="food_msg_not_picker">I\'m not picker with the food</string>

    <string name="cow">Beef</string>allergic
    <string name="chicken">Chicken</string>
    <string name="pork">Pork</string>
    <string name="fish">Fish</string>
    <string name="cheese">Cheese</string>
    <string name="milk">Milk</string>
    <string name="pepper">Pepper</string>

    <string name="app_settings_turn_serious_mode_on">Turn Serious Mode On :(</string>
    <string name="app_settings_show_help_dialog">Show help Dialog</string>

    <string name="no_config_msg">To be able to show your Food Restrictions you have to configure it first</string>
    <string name="help_title">How does it works?</string>
    <string name="help_message">1) You have to configure this application using the menu option \'My Restrictions\' to tell it which type of food you are allergic and which type of food you don\'t eat.\n\n 2) Next you will be able to choose in between a graphical version \'Show Icons\' or a text version \'Show texts\' to let people know more about your food restrictions.</string>
    <string name="help_not_show">Do not show it again</string>

    <string name="about_us_developers_title">Source Developers</string>
    <string name="about_us_icons_title">Icon Developers</string>

    <string name="select_a_language">Language to show</string>
    <string name="what_can_you_eat">What can you eat?</string>
    <string name="message_allergic_to">Hi! I want to tell you that I\'m allergic to those types of food listed bellow. Be sure you are not using it on my food</string>
    <string name="message_dont_eat">Hi! I want to tell you that I don\'t eat those types of food listed bellow. Be sure you are not using it on my food</string>

    <string name="serious_mode_on_msg">No!! Come on!! Seriously? Why take life so serious? But OK. Let\'s turn this serious mode on :D</string>
    <string name="serious_mode_off_msg">Awesome :D. Life is too good. Let\'s have some fun :D</string>

    <string name="msg_title_vegetarian">Vegetarian</string>
    <string name="msg_title_vegan">Vegan</string>
    <string name="msg_title_joke_cannibal">Cannibal</string>
    <string name="msg_veget">Hi, I\'m vegetarian. I do not eat fish, seafood, poultry or any meat.</string>
    <string name="msg_vegan">Hi, I\'m vegan. I do not eat fish, seafood, poultry, meat or any animal products, including eggs, dairy and honey.</string>
    <string name="msg_joke_cannibal">Hi, I\'m a cannibal. I choose you to be my lunch today, would you like to follow me to the kitchen?</string>

</resources>
